--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo": "~46.0.9",
     "expo-asset": "~8.6.1",
     "expo-constants": "~13.2.4",
+    "expo-document-picker": "~10.3.0",
     "expo-font": "10.2.0",
     "expo-image-picker": "~13.3.1",
     "expo-linking": "~3.2.2",
@@ -48,7 +49,11 @@
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0",
-    "uuid": "^9.0.0"
+    "simple-peer": "^9.7.0",
+    "socket.io-client": "^2.3.0",
+    "streamsaver": "^2.0.4",
+    "uuid": "^9.0.0",
+    "expo-file-system": "~14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
