--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^0.17.0",
+    "@expo/webpack-config": "^0.17.3",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/netinfo": "^9.3.0",
     "@react-native-picker/picker": "^2.4.2",
@@ -31,6 +31,7 @@
     "expo-asset": "~8.6.1",
     "expo-constants": "~13.2.4",
     "expo-document-picker": "~10.3.0",
+    "expo-file-system": "~14.1.0",
     "expo-font": "10.2.0",
     "expo-image-picker": "~13.3.1",
     "expo-linking": "~3.2.2",
@@ -43,6 +44,7 @@
     "react-native": "0.69.6",
     "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
@@ -50,10 +52,9 @@
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0",
     "simple-peer": "^9.7.0",
-    "socket.io-client": "^2.3.0",
+    "socket.io-client": "^4.5.3",
     "streamsaver": "^2.0.4",
-    "uuid": "^9.0.0",
-    "expo-file-system": "~14.1.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
