--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-simple-peer": "^0.1.5",
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0",
     "simple-peer": "^9.7.0",
